# Megatron-LM

./: .gitignore  .gitmodules  pretrain_bert.py  pretrain_codeformer.py  pyproject.toml
codeformer_utils/: __init__.py  chrf.py  metrics_calculation.py
configs/: config.sh  config_data.sh  config_global.sh  config_local.sh  config_local_path.sh  config_model.sh
configs_jettrain/: config_data.sh  config_local_path.sh  config_model.sh
examples/: pretrain_bert.sh  pretrain_codeformer.sh  pretrain_t5.sh
jettrain/: jettrain.sh  jettrain.yaml
megatron/: arguments.py  checkpointing.py  global_vars.py  initialize.py  training.py
megatron/core/tensor_parallel/: layers.py
megatron/data/: codeformer_dataset.py  data_samplers.py  dataset_utils.py
megatron/model/: __init__.py  codeformer_PL_model.py  codeformer_common_functions.py  codeformer_language_modeling.py  codeformer_method_naming.py  codeformer_model.py  fused_softmax.py  transformer.py
megatron/optimizer/: __init__.py
megatron/tokenizer/: tokenizer.py
scripts/: preprocess_data.sh  pretrain_bert.py  pretrain_codeformer.sh  pretrain_codeformer_distributed.sh  pretrain_codeformer_distributed_jettrain.sh  pretrain_codeformer_jettrain.sh  run_docker.sh
tools/: checkpoint_reshaping_and_interoperability.py  convert_checkpoints_to_HF.py  preprocess_data.py  preprocess_data_codeformer.py  preprocess_data_codeformer_lmodeling.py
